--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ app.datasource.jdbc-url=jdbc:mysql://localhost:3306/scfb?useSSL=false
 app.datasource.username=root
 app.datasource.password=
 app.datasource.maximum-pool-size=30
+
+#===============crawler config=================================
+crawl.config.numberOfCrawlers = 7
+crawl.config.crawlStorageFolder = /home/tab/uci/crawl/
+crawl.config.maxDepthOfCrawling = 7
+crawl.config.maxPagesToFetch = 7
+crawl.config.userAgentString = crawler4j (https://github.com/yasserg/crawler4j/)
+
