--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,12 @@
             <artifactId>crawler4j</artifactId>
             <version>4.3</version>
         </dependency>
-
+        <!--Generating your own meta-data using the annotation processor-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <properties>
