--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ crawl.config.userAgentString=crawler4j (https://github.com/yasserg/crawler4j/)
 crawl.config.startsWith
 #=================Solr config===============================#
 spring.data.solr.host=http://127.0.0.1:8983/solr/news
+#==================mybatis==================================#
+mybatis.mapper-locations=classpath*:hello/pojo/*Mapper.xml
+mybatis.type-aliases-package=hello.pojo
 
