--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.data.solr.host=http://127.0.0.1:8983/solr/news
 #==================mybatis==================================#
 mybatis.mapper-locations=classpath*:hello/pojo/*Mapper.xml
 mybatis.type-aliases-package=hello.pojo
-
+#==================Freemarker===================================#
+spring.freemarker.expose-request-attributes=true
+spring.http.encoding.charset=utf-8
